# kubecf

./: def.bzl
.drone/: config.star
.gitlab/pipelines/runtime/: config.sh
bosh/releases/pre_render_scripts/diego-cell/sle15-rootfs-setup/jobs/: patch_pre-start.sh
deploy/bundle/: BUILD.bazel
deploy/helm/kubecf/: values.yaml
deploy/helm/kubecf/assets/operations/: set_release_urls.yaml  set_sle_stemcells.yaml
deploy/helm/kubecf/assets/operations/buildpacks/: set_suse_buidpacks_path.yaml  set_suse_buildpacks.yaml  set_suse_buildpacks_path.yaml
deploy/helm/kubecf/assets/operations/instance_groups/: api.yaml  brain-tests.yaml  diego-cell.yaml  router.yaml  scheduler.yaml
deploy/helm/kubecf/assets/operations/stacks/: set_sle15_stack.yaml
deploy/helm/kubecf/templates/: bosh_deployment.yaml  brain-tests.yaml  ops.yaml
doc/dev/: minikube.md
testing/acceptance_tests/: BUILD.bazel
